--- a/minggu5/layout.html
+++ b/minggu5/layout.html
@@ -24,9 +24,8 @@
             "Pembunuhan orang Tionghoa") merupakan sebuah pogrom terhadap orang keturunan Tionghoa di kota pelabuhan
             Batavia, Hindia-Belanda (sekarang Jakarta). Kekerasan dalam batas kota berlangsung dari 9 Oktober hingga 22
             Oktober 1740 dan berbagai pertempuran kecil terjadi hingga akhir November tahun yang sama</p>
-
-    </div>
-    <footer style="background-color:bisque">Copyright <i>&copy;</i>pbw2022>
+    </article>
+    <footer style="background-color:bisque">Copyright <i>&copy;</i>pbw2022
     </footer>
 </body>
 
