Belajar mandiri sesi 10

--- a/minggu6/index.html
+++ b/minggu6/index.html
@@ -17,7 +17,7 @@
     </nav>
     <hr />
     <header style="text-align:center">
-        <img src="foto/foto-profile.jpg" width="300" height="400"alt="" border-radius="50%">
+        <img src="foto/foto-profile.jpg" width="300" height="400" style="border-radius:50%">
         <h1>Muhammad Iqbal Ali Sa'idil Muna</h1>
         <p> ( Web Develoer )</p>
     </header> 
