--- a/minggu6/tentang.html
+++ b/minggu6/tentang.html
@@ -14,30 +14,37 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="cv.pfd">Download CV</a>
-        <a href="contact.html">Contact</a>
+        <a href="kontak.html">Contact</a>
         <a href="tentang.html">About me</a>
     </nav>
 
     <hr />
     <article>
-        <h1>Tentang Saya</h1>
-        <p>
-            Hi, Saya adalah seorang Web Developer.html
-            saat ini sedang belajar HTML
-        </p>
-        <p>
-            Saya masih baru dalam web development, karena itu saya tidak akan pernah berhenti belajar.
-        </p>
-        <p>
-            Saya ingin menguasai HTML CSS dan JavaScript.
-            Simak Video tentang saya
-        </p>
+        <details>
+            <summary>Show</summary>
+            <h1>Tentang Saya</h1>r
+            <p>
+                Hi, Saya adalah seorang Web Developer.html
+                saat ini sedang belajar HTML
+            </p>
+            <p>
+                Saya masih baru dalam web development, karena itu saya tidak akan pernah berhenti belajar.
+            </p>
+            <p>
+                Saya ingin menguasai HTML CSS dan JavaScript.
+                Simak Video tentang saya
+            </p>
+        </details>
+        <details>
+            <summary>Cek My Video</summary>
+            <video id="videoSaya">
+                <source src="video/satru2.mp4" type="video/mp4">
+                <track src="video/satru2.vtt" kind="subtitles" srclang="id" label="Indonesia">
+                <track src="video/satruenglish.vtt" kind="subtitles" srclang="en" label="English">
+            </video>
+        </details>
 
-        <video id="videoSaya">
-            <source src="video/satru2.mp4" type="video/mp4">
-            <track src="video/satru2.vtt" kind="subtitles" srclang="id" label="Indonesia">
-            <track src="video/satruenglish.vtt" kind="subtitles" srclang="en" label="English">
-        </video>
+
 
         <p>
             <button type="button" onclick="playVideo()">Play</button>
