--- a/minggu11/index.html
+++ b/minggu11/index.html
@@ -26,7 +26,8 @@
     </form>
     <div class="container">
         <ul>
-            
+            <button id="delete">Del</button>
+            <button id="delete">Del</button>
         </ul>
     </div>
 
